Add reactions API
