# backend-laravel/routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Auth\AuthController;
 use App\Http\Controllers\PostController;
+use App\Http\Controllers\ReactionController;
 use App\Http\Controllers\ThreadController;
 use Illuminate\Support\Facades\Route;
 
@@ -18,3 +19,7 @@ Route::delete('/threads/{thread}', [ThreadController::class, 'destroy'])->middle
 
 Route::get('/threads/{thread}/posts', [PostController::class, 'index']);
 Route::post('/threads/{thread}/posts', [PostController::class, 'store'])->middleware('auth:sanctum');
+
+Route::get('/posts/{post}/reactions', [ReactionController::class, 'index']);
+Route::post('/posts/{post}/reactions', [ReactionController::class, 'store'])->middleware('auth:sanctum');
+Route::delete('/posts/{post}/reactions', [ReactionController::class, 'destroy'])->middleware('auth:sanctum');
